--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -208,6 +208,20 @@
 				</div>
 			</div>
 			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-locked</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-locked bg-icon bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
 
 		</div>
 	</div>
