--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -215,7 +215,11 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .inp-thumb-remove:after {display:block;content:'';position:absolute;right:6px;top:6px;width:24px;height:24px;background:url(../images/ico/ico-thumb-remove.svg) center center / contain no-repeat;}
 
 /* inp-column-list */
-.inp-column-list {display:flex;flex-direction:column;padding:16px 8px 16px 24px;}
+.inp-column-list {display:flex;flex-direction:column;padding:24px 8px;}
+.inp-column-list > .inp:not(:last-child) {margin-bottom:16px;}
+
+.inp-check-all-wrap .inp-column-list {padding:16px 8px 16px 24px;}
+.inp-check-all-wrap .inp-column-list > .inp:not(:last-child) {margin-bottom:0;}
 
 /* inp-check-all */
 .inp-check-all {border-radius:4px;border: 1px solid var(--border-8);background-color: var(--background-bg_lightGray);box-shadow: 0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
@@ -441,6 +445,10 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .icon-memo {
     -webkit-mask-image:url(../images/icon_only/icon_memo.svg);
     mask-image:url(../images/icon_only/icon_memo.svg);
+}
+.icon-locked {
+    -webkit-mask-image:url(../images/icon_only/icon_locked.svg);
+    mask-image:url(../images/icon_only/icon_locked.svg);
 }
 
 /* dropDown */
