--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -80,13 +80,13 @@
 							<div class="bs-typeA">
 								<div class="top">
 									<div class="left">
-										<picture class="logo01">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_top_logo01.svg">
 											<img src="../../resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
 										</picture>
 									</div>
 									<div class="right">
-										<picture class="aff">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_aff.svg">
 											<img src="../../resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
 										</picture>
@@ -95,13 +95,13 @@
 								<div class="line">
 									<picture>
 										<source srcset="../../resources/images/bs_card/bs_a_line.svg">
-										<img src="../../resources/images/bs_card/bs_a_line.svg">
+										<img src="../../resources/images/bs_card/bs_a_line.svg" alt="">
 									</picture>
 								</div>
 								<div class="center">
 									<div class="title">
 										<div class="left">
-											<picture class="logo02">
+											<picture>
 												<source srcset="../../resources/images/bs_card/bs_a_center_logo01.svg">
 												<img src="../../resources/images/bs_card/bs_a_center_logo01.svg" alt="우리금융그룹">
 											</picture>
@@ -162,13 +162,13 @@
 							<div class="bs-typeA">
 								<div class="top">
 									<div class="left">
-										<picture class="logo01">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_top_logo01.svg">
 											<img src="../../resources/images/bs_card/bs_a_top_logo01.svg" alt="우리 마음속 첫번째 금융">
 										</picture>
 									</div>
 									<div class="right">
-										<picture class="aff">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_aff.svg">
 											<img src="../../resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
 										</picture>
@@ -177,7 +177,7 @@
 								<div class="line">
 									<picture>
 										<source srcset="../../resources/images/bs_card/bs_a_line.svg">
-										<img src="../../resources/images/bs_card/bs_a_line.svg">
+										<img src="../../resources/images/bs_card/bs_a_line.svg" alt="">
 									</picture>
 								</div>
 								<div class="center">
@@ -189,7 +189,6 @@
 													<img src="../../resources/@temp/thumb_h.png" alt="">
 												</picture>
 											</figure>
-
 										</div>
 										<div class="right">
 											<dl>
@@ -201,7 +200,7 @@
 									</div>
 									<div class="info">
 										<div class="left">
-											<picture class="logo02">
+											<picture>
 												<source srcset="../../resources/images/bs_card/bs_a_center_logo02.svg">
 												<img src="../../resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
 											</picture>
@@ -252,13 +251,13 @@
 							<div class="bs-typeA">
 								<div class="top">
 									<div class="left">
-										<picture class="logo01">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_top_logo02.svg">
 											<img src="../../resources/images/bs_card/bs_a_top_logo02.svg" alt="우리 마음속 첫번째 금융" style="margin-bottom:-10px;">
 										</picture>
 									</div>
 									<div class="right">
-										<picture class="aff">
+										<picture>
 											<source srcset="../../resources/images/bs_card/bs_a_aff.svg">
 											<img src="../../resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
 										</picture>
@@ -267,13 +266,13 @@
 								<div class="line">
 									<picture>
 										<source srcset="../../resources/images/bs_card/bs_a_line.svg">
-										<img src="../../resources/images/bs_card/bs_a_line.svg">
+										<img src="../../resources/images/bs_card/bs_a_line.svg" alt="">
 									</picture>
 								</div>
 								<div class="center">
 									<div class="title">
 										<div class="left">
-											<picture class="logo02">
+											<picture>
 												<source srcset="../../resources/images/bs_card/bs_a_center_logo01.svg">
 												<img src="../../resources/images/bs_card/bs_a_center_logo01.svg" alt="우리금융그룹">
 											</picture>
@@ -290,6 +289,176 @@
 										<div class="left">
 											<div class="location">04632 서울특별시 중구 소공로 51</div>
 											<div class="email">woori@woorifg.com</div>
+										</div>
+										<div class="right">
+											<div class="contact">
+												<div class="row">
+													<div class="th">Mobile</div>
+													<div class="td">010.1234.5678</div>
+												</div>
+												<div class="row">
+													<div class="th">Tel</div>
+													<div class="td">02.1234.5678</div>
+												</div>
+												<div class="row">
+													<div class="th">내선</div>
+													<div class="td">123</div>
+												</div>
+												<div class="row">
+													<div class="th">Fax</div>
+													<div class="td">0505.001.6161</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="bottom">
+									<ul>
+										<li>CFP(국제공인재무설계사)</li>
+										<li>신용위험분석사(CRA)2차</li>
+										<li>신용위험분석사(CRA)1차</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Type B</h2>
+				<div class="guide-column-list">
+					<div class="bs-card-wrap">
+						<div class="bs-card ">
+							<div class="bs-typeB">
+								<div class="top">
+									<div class="left">
+										<picture>
+											<source srcset="../../resources/images/bs_card/bs_b_top_logo01.svg">
+											<img src="../../resources/images/bs_card/bs_b_top_logo01.svg" alt="TWO CHAIRS">
+										</picture>
+									</div>
+									<div class="right">
+										<picture>
+											<source srcset="../../resources/images/bs_card/bs_a_aff.svg">
+											<img src="../../resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+										</picture>
+									</div>
+								</div>
+								<div class="center">
+									<div class="title">
+										<div class="left">
+											<picture>
+												<source srcset="../../resources/images/bs_card/bs_b_center_logo01.svg">
+												<img src="../../resources/images/bs_card/bs_b_center_logo01.svg" alt="CFP">
+											</picture>
+										</div>
+										<div class="right">
+											<dl>
+												<dt>김우리</dt>
+												<dd>직위/호칭</dd>
+												<dd>소속</dd>
+											</dl>
+										</div>
+									</div>
+									<div class="info">
+										<div class="left">
+											<div class="left">
+												<picture>
+													<source srcset="../../resources/images/bs_card/bs_a_center_logo02.svg">
+													<img src="../../resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
+												</picture>
+												<div class="location">04632 서울특별시 중구 소공로 51</div>
+												<div class="email">woori@woorifg.com</div>
+											</div>
+										</div>
+										<div class="right">
+											<div class="contact">
+												<div class="row">
+													<div class="th">Mobile</div>
+													<div class="td">010.1234.5678</div>
+												</div>
+												<div class="row">
+													<div class="th">Tel</div>
+													<div class="td">02.1234.5678</div>
+												</div>
+												<div class="row">
+													<div class="th">내선</div>
+													<div class="td">123</div>
+												</div>
+												<div class="row">
+													<div class="th">Fax</div>
+													<div class="td">0505.001.6161</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="bottom">
+									<ul>
+										<li>CFP(국제공인재무설계사)</li>
+										<li>신용위험분석사(CRA)2차</li>
+										<li>신용위험분석사(CRA)1차</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Type B</h2>
+				<div class="guide-column-list">
+					<div class="bs-card-wrap">
+						<div class="bs-card ">
+							<div class="bs-typeB">
+								<div class="top">
+									<div class="left">
+										<picture>
+											<source srcset="../../resources/images/bs_card/bs_b_top_logo01.svg">
+											<img src="../../resources/images/bs_card/bs_b_top_logo01.svg" alt="TWO CHAIRS">
+										</picture>
+									</div>
+									<div class="right">
+										<picture>
+											<source srcset="../../resources/images/bs_card/bs_a_aff.svg">
+											<img src="../../resources/images/bs_card/bs_a_aff.svg" alt="우리금융그룹">
+										</picture>
+									</div>
+								</div>
+								<div class="center">
+									<div class="title">
+										<div class="left">
+											<figure>
+												<picture>
+													<source srcset="../../resources/@temp/thumb_h.png">
+													<img src="../../resources/@temp/thumb_h.png" alt="">
+												</picture>
+											</figure>
+											<picture>
+												<source srcset="../../resources/images/bs_card/bs_b_center_logo01.svg">
+												<img src="../../resources/images/bs_card/bs_b_center_logo01.svg" alt="CFP">
+											</picture>
+										</div>
+										<div class="right">
+											<dl>
+												<dt>김우리</dt>
+												<dd>직위/호칭</dd>
+												<dd>소속</dd>
+											</dl>
+										</div>
+									</div>
+									<div class="info">
+										<div class="left">
+											<div class="left">
+												<picture>
+													<source srcset="../../resources/images/bs_card/bs_a_center_logo02.svg">
+													<img src="../../resources/images/bs_card/bs_a_center_logo02.svg" alt="우리은행">
+												</picture>
+												<div class="location">04632 서울특별시 중구 소공로 51</div>
+												<div class="email">woori@woorifg.com</div>
+											</div>
 										</div>
 										<div class="right">
 											<div class="contact">
