--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -132,24 +132,33 @@
 .bs-card-wrap {}
 .bs-card {border-radius:8px;border:1px solid var(--border-8);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .bs-card .bs-typeA {background-color:var(--background-bg_lightGray);border-radius:inherit;}
-.bs-card .bs-typeWibee {background-color:var(--background-bg_lightGray);border-radius:inherit;}
+.bs-card .bs-typeB {background-color:#F7F7F1;border-radius:inherit;}
+.bs-card .bs-typeB .top {padding-bottom:12px;}
+.bs-card .bs-typeB .title {border-bottom:1px solid #7A533C;padding-bottom: 10px;}
+.bs-card .bs-typeB .title .left {min-height:58px;}
+.bs-card .bs-typeB .location {margin-top: 12px;}
+
 .bs-card .right {margin-left:auto;}
 .bs-card .top {display:flex;align-items:center;justify-content:space-between;padding:13px 18px 10px;}
 .bs-card .line picture img {width:100%;}
-.bs-card .center {padding-bottom:10px;}
-.bs-card .title {display:flex;justify-content:space-between;padding:0 18px;gap:10px;}
-.bs-card .title figure {margin-bottom:8px;}
+.bs-card .center {padding:0 18px 10px;}
+
+.bs-card .title {display:flex;justify-content:space-between;gap:10px;}
+.bs-card .title .left {display:flex;gap:8px;}
 .bs-card .title figure picture img {width:46px;height:58px;object-fit:cover;border:1px solid var(--border-8);background-color:var(--background-bg_gray);}
 .bs-card .title .right {flex:0;white-space:nowrap;word-break:break-word;}
+
 .bs-card dl {text-align:right;}
 .bs-card dl dt {font-size:18px;font-weight:500;color:var(--typography-title);letter-spacing:5px;margin-right:-5px;line-height:1;margin-bottom:8px;}
 .bs-card dl dd {font-size:11px;font-weight:400;color:var(--typography-body);line-height:1;}
 .bs-card dl dd:not(:last-child) {margin-bottom:3px;}
-.bs-card .center .info {display:flex;justify-content:space-between;padding:0 18px;gap:10px;margin-top:8px;}
+
+.bs-card .info {display:flex;justify-content:space-between;gap:10px;padding-top: 8px;}
 .bs-card .location {font-size:10px;font-weight:400;color:var(--typography-body);line-height:1.3;}
 .bs-card .location:not(:first-child) {margin-top:5px;}
 .bs-card .email {font-size:10px;font-weight:400;color:var(--typography-body);line-height:1.3;margin-top:2px;}
 .bs-card .info .right {flex:0;white-space:nowrap;}
+
 .bs-card .contact {display:table;}
 .bs-card .contact .row {display:table-row;}
 .bs-card .contact .row .th {width:0;white-space:nowrap;font-weight:500;}
