--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -251,10 +251,8 @@
 							<div class="bs-typeA">
 								<div class="top">
 									<div class="left">
-										<picture>
-											<source srcset="../../resources/images/bs_card/bs_a_top_logo02.svg">
-											<img src="../../resources/images/bs_card/bs_a_top_logo02.svg" alt="우리 마음속 첫번째 금융" style="margin-bottom:-10px;">
-										</picture>
+										<object type="image/svg+xml" data="../../resources/images/bs_card/bs_a_top_logo02.svg" style="margin-bottom:-10px;">
+										</object>
 									</div>
 									<div class="right">
 										<picture>
@@ -348,10 +346,8 @@
 								<div class="center">
 									<div class="title">
 										<div class="left">
-											<picture>
-												<source srcset="../../resources/images/bs_card/bs_b_center_logo01.svg">
-												<img src="../../resources/images/bs_card/bs_b_center_logo01.svg" alt="CFP">
-											</picture>
+											<object type="image/svg+xml" data="../../resources/images/bs_card/bs_b_center_logo01.svg">
+											</object>
 										</div>
 										<div class="right">
 											<dl>
@@ -436,10 +432,8 @@
 													<img src="../../resources/@temp/thumb_h.png" alt="">
 												</picture>
 											</figure>
-											<picture>
-												<source srcset="../../resources/images/bs_card/bs_b_center_logo01.svg">
-												<img src="../../resources/images/bs_card/bs_b_center_logo01.svg" alt="CFP">
-											</picture>
+											<object type="image/svg+xml" data="../../resources/images/bs_card/bs_b_center_logo01.svg">
+											</object>
 										</div>
 										<div class="right">
 											<dl>
