--- a/html/components/component_bottombtn.html
+++ b/html/components/component_bottombtn.html
@@ -127,7 +127,7 @@
 				<button type="button" class="btn-large btn-primary">고객 명함 등록</button>
 			</div>
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-secondary">등록</button>
+				<button type="button" class="btn-large btn-outlined">등록</button>
 				<button type="button" class="btn-large btn-primary">공유</button>
 			</div>
 			<div class="btn-wrap">
