--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -75,6 +75,8 @@
 			<div class="ui-guide-box">
 				<h2>Type A</h2>
 				<div class="guide-column-list">
+
+					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap">
 						<div class="bs-card ">
 							<div class="bs-typeA">
@@ -151,12 +153,16 @@
 							</div>
 						</div>
 					</div>
+					<!-- //bs-card-wrap -->
+
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>Type A</h2>
 				<div class="guide-column-list">
+
+					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap">
 						<div class="bs-card ">
 							<div class="bs-typeA">
@@ -185,8 +191,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="../../resources/@temp/thumb_h.png">
-													<img src="../../resources/@temp/thumb_h.png" alt="">
+													<source srcset="../../resources/images/bs_card/bs_photo.svg">
+													<img src="../../resources/images/bs_card/bs_photo.svg" alt="">
 												</picture>
 											</figure>
 										</div>
@@ -239,6 +245,8 @@
 							</div>
 						</div>
 					</div>
+					<!-- //bs-card-wrap -->
+
 				</div>
 			</div>
 			<hr>
@@ -246,6 +254,8 @@
 			<div class="ui-guide-box">
 				<h2>Type A</h2>
 				<div class="guide-column-list">
+
+					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap">
 						<div class="bs-card ">
 							<div class="bs-typeA">
@@ -320,12 +330,16 @@
 							</div>
 						</div>
 					</div>
+					<!-- //bs-card-wrap -->
+
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>Type B</h2>
 				<div class="guide-column-list">
+
+					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap">
 						<div class="bs-card ">
 							<div class="bs-typeB">
@@ -400,12 +414,16 @@
 							</div>
 						</div>
 					</div>
+					<!-- //bs-card-wrap -->
+
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>Type B</h2>
 				<div class="guide-column-list">
+
+					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap">
 						<div class="bs-card ">
 							<div class="bs-typeB">
@@ -428,8 +446,8 @@
 										<div class="left">
 											<figure>
 												<picture>
-													<source srcset="../../resources/@temp/thumb_h.png">
-													<img src="../../resources/@temp/thumb_h.png" alt="">
+													<source srcset="../../resources/images/bs_card/bs_photo.svg">
+													<img src="../../resources/images/bs_card/bs_photo.svg" alt="">
 												</picture>
 											</figure>
 											<object type="image/svg+xml" data="../../resources/images/bs_card/bs_b_center_logo01.svg">
@@ -486,6 +504,8 @@
 							</div>
 						</div>
 					</div>
+					<!-- //bs-card-wrap -->
+
 				</div>
 			</div>
 			<hr>
