--- a/html/layout/layout.html
+++ b/html/layout/layout.html
@@ -95,7 +95,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-secondary">등록</button>
+				<button type="button" class="btn-large btn-outlined">등록</button>
 				<button type="button" class="btn-large btn-primary">공유</button>
 			</div>
 		</div>
