--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -17,7 +17,7 @@
 .btn-primary:not([aria-disabled="true"]):active {background-color:var(--button-primary-pressed);}
 .btn-primary[aria-disabled="true"] {background-color:var(--button-primary-disabled);color:var(--button-primary-onDisabled);}
 
-.btn-secondary {background-color:var(--button-secondary-enabled);color:var(--button-secondary-onEnabled);}
+.btn-secondary {background-color:var(--button-secondary-enabled);color:var(--button-secondary-onEnabled);border:1px solid var(--button-secondary-border);}
 .btn-secondary:not([aria-disabled="true"]):active {background-color:var(--button-secondary-pressed);}
 .btn-secondary[aria-disabled="true"] {background-color:var(--button-secondary-disabled);color:var(--button-secondary-onDisabled);}
 
