--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -70,35 +70,16 @@
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
 				<div class="guide-column-list">
-					<button type="button" class="btn-large btn-primary" onclick="swalFire('삭제하시겠습니까', '예', true, '아니요');">Alert1</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire2()">Alert2</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire3('삭제하시겠습니까', '예', true, '아니요');">Alert3</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire4('삭제하시겠습니까', '예', true, '아니요')">Alert4</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire5('삭제하시겠습니까', '예', '확인')">Alert5</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire6('삭제하시겠습니까', '예', '확인')">Alert6</button>
+					<button type="button" class="btn-large btn-primary" onclick="$swal.fire01('삭제하시겠습니까', '예', true, '아니요');">Alert1</button>
+					<button type="button" class="btn-large btn-primary" onclick="$swal.fire02('삭제하시겠습니까', 'caution', '예',  true, '아니요');">Alert2</button>
+					<button type="button" class="btn-large btn-primary" onclick="$swal.fire03('삭제하시겠습니까', '예', true, '아니요')">Alert3</button>
+					<button type="button" class="btn-large btn-primary" onclick="$swal.fire04('삭제하시겠습니까', '예', 'icon-locked', '확인')">Alert4</button>
+					<button type="button" class="btn-large btn-primary" onclick="swalFire2()">AlertCamera</button>
 
 				</div>
 			</div>
 		</div>
 	</div>
-	<script>
-		function swalFire(title, confirmButtonText, showCancelButton, cancelButtonText) {
-			Swal.fire({
-				showCancelButton: showCancelButton,
-				showCloseButton: false,
-				reverseButtons: true,
-				title: title,
-				confirmButtonText: confirmButtonText,
-				cancelButtonText: cancelButtonText,
-				customClass: {
-					actions: 'btn-wrap',
-					cancelButton: " btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				buttonsStyling: false
-			})
-		}
-	</script>
 	<script>
 		function swalFire2() {
 			Swal.fire({
@@ -125,116 +106,6 @@
 		}
 	</script>
 
-	<script>
-		function swalFire3(title, confirmButtonText, showCancelButton, cancelButtonText) {
-			Swal.fire({
-				showCancelButton: showCancelButton,
-				showCloseButton: false,
-				reverseButtons: true,
-				title: `<span class="description info body-xlarge">${title}</span>`,
-				confirmButtonText: confirmButtonText,
-				cancelButtonText: cancelButtonText,
-				customClass: {
-					actions: 'btn-wrap',
-					htmlContainer: 'al',
-					cancelButton: "btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				buttonsStyling: false
-			})
-			console.log(title, confirmButtonText, showCancelButton, cancelButtonText)
-		}
-	</script>
-
-	<script>
-		function swalFire4(title, text, showCancelButton, confirmButtonText, cancelButtonText) {
-			Swal.fire({
-				showCancelButton: showCancelButton,
-				showCloseButton: true,
-				reverseButtons: true,
-				title: title,
-				text: text,
-				confirmButtonText: '예',
-				cancelButtonText: '아니요',
-				customClass: {
-					title: 'title-large',
-					htmlContainer: 'al',
-					actions: 'btn-wrap pt40',
-					cancelButton: "btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				buttonsStyling: false
-			})
-		}
-	</script>
-	<script>
-		function swalFire5(title, text, confirmButtonText) {
-			Swal.fire({
-				showCloseButton: true,
-				reverseButtons: true,
-				confirmButtonText: confirmButtonText,
-				customClass: {
-					htmlContainer: 'mt40',
-					actions: 'btn-wrap',
-					cancelButton: "btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				buttonsStyling: false,
-				html: `
-                    <i class="icon-only icon-48 icon-caution bg-icon bg-icon-gray_1"></i>
-                    <strong class="title-large mt8">${title}</strong>
-                    <p class="body-large mt8">${text}</p>
-                `,
-			})
-		}
-	</script>
-	<script>
-		function swalFire6(title, text, confirmButtonText) {
-			Swal.fire({
-				showCloseButton: true,
-				reverseButtons: true,
-				confirmButtonText: confirmButtonText,
-				customClass: {
-					htmlContainer: 'mt40',
-					actions: 'btn-wrap',
-					cancelButton: "btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				buttonsStyling: false,
-				html: `
-                    <i class="icon-only icon-48 icon-locked bg-icon bg-icon-gray_1"></i>
-                    <strong class="title-large mt8">${title}</strong>
-                    <p class="body-large mt8">${text}</p>
-                `,
-			})
-		}
-	</script>
-	<script>
-		function swalInit() {
-			Swal.fire({
-				customClass: {
-					container: '...',
-					popup: '...',
-					header: '...',
-					title: '...',
-					closeButton: '...',
-					icon: '...',
-					image: '...',
-					htmlContainer: '...',
-					input: '...',
-					inputLabel: '...',
-					validationMessage: '...',
-					actions: '...',
-					confirmButton: '...',
-					denyButton: '...',
-					cancelButton: '...',
-					loader: '...',
-					footer: '....',
-					timerProgressBar: '....',
-				}
-			})
-		}
-	</script>
 </body>
 
 
