--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -97,11 +97,11 @@
 			<hr>
 			<h2>Button <span>Noborder</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-noborder"><i class="ico-order"></i>순서 설정</button>
+				<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
 			</div>
 			<h2>Button <span>Noborder Shadow</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-noborder btn-noborder-text-shadow px4 py6"><i class="ico-delete-shadow"></i>삭제</button>
+				<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
 			</div>
 			<h2>Button <span>Border</span></h2>
 			<div class="guide-column-list">
