--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -8,7 +8,7 @@
 .btn-medium,
 .btn-small {transition:background-color 0.1s ease;}
 
-.btn-noborder {display:inline-flex;align-items:center;justify-content:center;height:40px;font-size:14px;padding:12px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;}
+.btn-noborder {display:inline-flex;align-items:center;justify-content:center;font-size:14px;padding:4px;;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:1;border-radius:8px;}
 
 .btn-border {display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:8px;border:1px solid var(--border-8);background-color:var(--background-bg_white);}
 .btn-border.is-active {background-color:var(--background-bg_gray);border-color:transparent;}
@@ -39,8 +39,8 @@
 .btn-black {color:var(--button-primary-onEnabled);background-color:var(--black-80);}
 
 
-.btn-noborder {color:var(--button-textBtn-Enabled);}
-.btn-noborder.btn-noborder-text-shadow {color:var(--white-100);text-shadow:1px 1px 0px rgba(0, 0, 0, 0.12);border-radius:8px;height:30px;}
+.btn-noborder {color:var(--typography-caption);}
+.btn-noborder.text-shadow {color:var(--white-100);text-shadow:1px 1px 0px rgba(0, 0, 0, 0.12);}
 .btn-noborder.btn-noborder-text-shadow:active {background: var(--surface-surface300);}
 
 .btn-round {border-radius:50px;}
@@ -76,10 +76,9 @@
 .btn-tertiary > i {background-color:var(--button-tertiary-onEnabled);}
 .btn-outlined > i {background-color:var(--icon-gray_2);}
 .btn-ghost > i {background-color:var(--button-ghost-onEnabled);}
-.btn-noborder > i {background-color:var(--button-textBtn-Enabled);}
+.btn-noborder > i {background-color:var(--icon-gray_2);}
 .btn-border > i {background-color:var(--gray-600);}
 .btn-border.is-active > i {background-color:var(--status-active);}
-.btn-noborder-text-shadow > i {background-color:var(--white-100);}
 
 i.ico-check {-webkit-mask-image:url(../images/ico/ico_check.svg);mask-image:url(../images/ico/ico_check.svg);}
 i.ico-share {-webkit-mask-image:url(../images/ico/ico_share.svg);mask-image:url(../images/ico/ico_share.svg);}
@@ -378,6 +377,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 /* stroke */
 .stroke {background-color:var(--border-8);height:1px;}
+.stroke.stroke-fluid {margin-left:-16px;margin-right:-16px;}
 .stroke4 {background-color:var(--border-8);height:4px;}
 /* division */
 .division {display:flex;content:'';width:1px;height:18px;align-items:center;justify-content:center;background-color:var(--border-8);}
